hub/api/config/13-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: db
  namespace: tekton-hub-preview
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
    - name: postgresql
      port: 5432
      protocol: TCP
      targetPort: 5432
