hub/api/config/22-api-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: tekton-hub-preview
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
    - port: 5000
      targetPort: 5000
  type: NodePort
